Added link to the Github repository

--- a/index.html
+++ b/index.html
@@ -15,5 +15,11 @@
   </head>
   <body>
     <h1>Welcome to Singapore</h1>
+    <footer>
+      This project was coded by Aishah Al-Rashid and is
+      <a href="https://github.com/aishah849/travel-project" target="_blank"
+        >open sourced</a
+      >
+    </footer>
   </body>
 </html>
