--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
   </head>
   <body>
     <h1>Welcome to Singapore</h1>
+    <h2>Little Red Dot</h2>
     <footer>
       This project was coded by Aishah Al-Rashid and is
       <a href="https://github.com/aishah849/travel-project" target="_blank"
