--- a/index.html
+++ b/index.html
@@ -14,13 +14,19 @@
     <title>Welcome to Singapore</title>
   </head>
   <body>
-    <h1>Welcome to Singapore</h1>
-    <h2>Little Red Dot</h2>
-    <footer>
-      This project was coded by Aishah Al-Rashid and is
-      <a href="https://github.com/aishah849/travel-project" target="_blank"
-        >open sourced</a
-      >
-    </footer>
+    <div class="container">
+      <header>
+        <h3>.TRAVEL.</h3>
+        <h1>Welcome to Singapore</h1>
+        <h2>Little Red Dot</h2>
+        <a href="#more">Learn more</a>
+      </header>
+      <footer>
+        This project was coded by Aishah Al-Rashid and is
+        <a href="https://github.com/aishah849/travel-project" target="_blank"
+          >open sourced</a
+        >
+      </footer>
+    </div>
   </body>
 </html>
