--- a/index.html
+++ b/index.html
@@ -22,48 +22,50 @@
         <a href="#more">Learn more</a>
       </header>
       <footer>
-        <div>
-          <h3>More about Singapore</h3>
-          <ul>
-            <li>
-              <a href="https://www.changiairport.com/" target="_blank"
-                >Singapore Changi Airport Website</a
-              >
-            </li>
-            <li>
-              <a href="https://www.changiairport.com/" target="_blank"
-                >Map of Singapore</a
-              >
-            </li>
-            <li>
+        <section class="grid">
+          <div>
+            <h3>More about Singapore</h3>
+            <ul>
+              <li>
+                <a href="https://www.changiairport.com/" target="_blank"
+                  >Singapore Changi Airport Website</a
+                >
+              </li>
+              <li>
+                <a href="https://www.onemap.gov.sg/main/v2/" target="_blank"
+                  >Map of Singapore</a
+                >
+              </li>
+              <li>
+                <a
+                  href="https://www.visitsingapore.com/travel-guide-tips/getting-around/"
+                  target="_blank"
+                  >Public Transport</a
+                >
+              </li>
+            </ul>
+          </div>
+          <div>
+            <h3>About Me</h3>
+            <p>
+              Hi! My name is Aishah. I am a Singaporean and I adore my country.
+            </p>
+          </div>
+          <div>
+            <h3>About this website</h3>
+            <p>
+              I created this page as part of a project for SheCodes Responsive
+              to develop my coding skills.
+              <br />
+              This project was coded by Aishah Al-Rashid and is
               <a
-                href="https://www.visitsingapore.com/travel-guide-tips/getting-around/"
+                href="https://github.com/aishah849/travel-project"
                 target="_blank"
-                >Public Transport</a
+                >open sourced</a
               >
-            </li>
-          </ul>
-        </div>
-        <div>
-          <h3>About Me</h3>
-          <p>
-            Hi! My name is Aishah. I am a Singaporean and I adore my country. I
-            created this page as part of a project for SheCodes Responsive to
-            develop my coding skills.
-          </p>
-        </div>
-        <div>
-          <h3>About this website</h3>
-          <p>
-            I created this page as part of a project for SheCodes Responsive to
-            develop my coding skills.
-          </p>
-          <br />
-        </div>
-        This project was coded by Aishah Al-Rashid and is
-        <a href="https://github.com/aishah849/travel-project" target="_blank"
-          >open sourced</a
-        >
+            </p>
+          </div>
+        </section>
       </footer>
     </div>
   </body>
