Added grids on main section

--- a/index.html
+++ b/index.html
@@ -21,8 +21,22 @@
         <h2>Little Red Dot</h2>
         <a href="#more">Learn more</a>
       </header>
+      <main>
+        <section class="grid grid-2-columns">
+        <div>
+        <img src="images/merlion.jpg" alt="merlion" class="img-responsive" />
+        </div>
+        <div>
+        <h2>Why Singapore?</hh2>
+          <h3>Singapore, The Lion City</h3>
+          <p>In the 14th century, a Sumatran prince spotted an auspicious beast upon landing on an island after a thunderstorm, which he was told was a 'lion'. Thus, the name Singapore comes from the Malay words “Singa” for lion and “Pura” for city. The island became the site of a Malay fishing village and inhabited by several hundred indigenous Orang Laut.</p>
+          <p>In 1822, ethnic residential areas were segregated into four areas. The European Town had residents made up of European traders, Eurasians and rich Asians, while the ethnic Chinese were located in present-day Chinatown and south-east of the Singapore River. Ethnic Indians resided at Chulia Kampong north of Chinatown, and Kampong Gelam consisted of Muslims, ethnic Malays and Arabs.</p>
+          <p>Today, many slices of Singapore’s multi-cultural, colonial and wartime past are preserved in and around the city. You can visit monuments, museums and memorials, or for a real trip through time, take a walk along a heritage trail.</p>
+      </div>
+    </section>
+    </main>
       <footer>
-        <section class="grid">
+        <section class="grid grid-3-columns-with-first-narrow ">
           <div>
             <h3>More about Singapore</h3>
             <ul>
