Updated links deco

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             <ul>
               <li>
                 <a href="https://www.changiairport.com/" target="_blank"
-                  >Singapore Changi Airport Website</a
+                  >Changi Airport Website</a
                 >
               </li>
               <li>
