Added the card and the photos of cafes.

--- a/index.html
+++ b/index.html
@@ -27,14 +27,68 @@
         <img src="images/merlion.jpg" alt="merlion" class="img-responsive" />
         </div>
         <div>
-        <h2>Why Singapore?</hh2>
+          <h2>Why Singapore?</h2>
           <h3>Singapore, The Lion City</h3>
           <p>In the 14th century, a Sumatran prince spotted an auspicious beast upon landing on an island after a thunderstorm, which he was told was a 'lion'. Thus, the name Singapore comes from the Malay words “Singa” for lion and “Pura” for city. The island became the site of a Malay fishing village and inhabited by several hundred indigenous Orang Laut.</p>
           <p>In 1822, ethnic residential areas were segregated into four areas. The European Town had residents made up of European traders, Eurasians and rich Asians, while the ethnic Chinese were located in present-day Chinatown and south-east of the Singapore River. Ethnic Indians resided at Chulia Kampong north of Chinatown, and Kampong Gelam consisted of Muslims, ethnic Malays and Arabs.</p>
           <p>Today, many slices of Singapore’s multi-cultural, colonial and wartime past are preserved in and around the city. You can visit monuments, museums and memorials, or for a real trip through time, take a walk along a heritage trail.</p>
+        </div>
+      </section>
+      <section class="secondary">
+      <h2 class ="text-center">CAFÉS</h2>
+      <h3 class="text-center">My favourite halal cafés in Singapore</h3>
+      <div class="grid grid-3-columns">
+        <div class="card">
+          <div class="card-header">
+          <img src="images/cafes/dutchcolony.jpeg" alt="dutch-colony"
+          class="cafes"></div>
+          <div class="card-body">
+          <h4>Dutch Colony Coffee Co.</h4>
+          <p>In every element that they do, this café inspires to provide an exciting and memorable end-to-end experience, be it from retail, education, or business to business platform. They hope to brew moments and inspires relationships with their customers.</p>
+          <h5>Address:</h5>
+          <p>113 Frankel Avenue</p>
+          <h5>What I like about it</h5>
+          <p>Best all-day breakfast menu.</p>
+          </div>
+          <div class="card-footer">
+          <a href="https://www.dutchcolony.sg/" target="_blank" class="btn">Learn More</a>
+          </div>
+        </div>
+        <div class="card">
+          <div class="card-header">
+          <img src="images/cafes/pennyuniversity.jpg" alt="penny-unievrsity"
+          class="cafes"></div>
+          <div class="card-body">
+          <h4>Penny University</h4>
+          <p>Serving since 2012, this specialty coffeehouse started out with community-focused origins and their drive to simply serve the best coffee. Marked by a commitment to friendly and approachable service, they have grown into a full-service cafe offering all-day breakfast and brunch as well as a curated bistronomy cuisine in the evenings.</p>
+          <h5>Address:</h5>
+          <p>17 Jalan Klapa</p>
+          <h5>What I like about it</h5>
+          <p>Family friendly hangout with a kids' menu.</p>
+          </div>
+          <div class="card-footer">
+          <a href="https://www.pennyuniversitysg.com/" target="_blank" class="btn">Learn More</a>
+          </div>
+        </div>
+        <div class="card">
+          <div class="card-header">
+          <img src="images/cafes/whitelabel.jpeg" alt="white-label"
+          class="cafes"></div>
+          <div class="card-body">
+          <h4>The White Label</h4>
+          <p>Enjoy an oasis of calm amidst the bustle of the city and take your time to savour classical French cuisine made Halal. Indulge in The White Label’s unique French Malayan cuisine and rediscover nostalgic local flavours presented in classical French cooking techniques.</p>
+          <h5>Address:</h5>
+          <p>734 North Bridge Road</p>
+          <h5>What I like about it</h5>
+          <p>Must try the smoked salmon and eggs benedict combo. The cakes are simply divine!</p>
+          </div>
+          <div class="card-footer">
+          <a href="https://thewhitelabel.sg/" target="_blank" class="btn">Learn More</a>
+          </div>
+        </div>
       </div>
     </section>
-    </main>
+  </main>
       <footer>
         <section class="grid grid-3-columns-with-first-narrow ">
           <div>
@@ -79,7 +133,6 @@
               >
             </p>
           </div>
-        </section>
       </footer>
     </div>
   </body>
