Added responsive google maps embed

--- a/index.html
+++ b/index.html
@@ -39,9 +39,11 @@
       <h3 class="text-center">My favourite halal cafés in Singapore</h3>
       <div class="grid grid-3-columns">
         <div class="card">
-          <div class="card-header">
+          <div class="card-header grid grid-2-columns">
           <img src="images/cafes/dutchcolony.jpeg" alt="dutch-colony"
-          class="cafes"></div>
+          class="cafes">
+          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d127641.01929428827!2d103.77799272537229!3d1.3060153909064303!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x31da22a688886117%3A0x1fd0b85092ce6600!2sDutch%20Colony%20Coffee%20Co.!5e0!3m2!1sen!2ssg!4v1673591963538!5m2!1sen!2ssg" class="embed" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+        </div>
           <div class="card-body">
           <h4>Dutch Colony Coffee Co.</h4>
           <p>In every element that they do, this café inspires to provide an exciting and memorable end-to-end experience, be it from retail, education, or business to business platform. They hope to brew moments and inspires relationships with their customers.</p>
@@ -55,9 +57,11 @@
           </div>
         </div>
         <div class="card">
-          <div class="card-header">
+          <div class="card-header grid grid-2-columns">
           <img src="images/cafes/pennyuniversity.jpg" alt="penny-unievrsity"
-          class="cafes"></div>
+          class="cafes">
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3988.7846024361006!2d103.85744861475393!3d1.3042818990487168!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x31da180ae6899275%3A0xfec79a33ffc6196b!2sPenny%20University!5e0!3m2!1sen!2ssg!4v1673592600259!5m2!1sen!2ssg" class="embed" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+      </div>
           <div class="card-body">
           <h4>Penny University</h4>
           <p>Serving since 2012, this specialty coffeehouse started out with community-focused origins and their drive to simply serve the best coffee. Marked by a commitment to friendly and approachable service, they have grown into a full-service cafe offering all-day breakfast and brunch as well as a curated bistronomy cuisine in the evenings.</p>
@@ -71,9 +75,9 @@
           </div>
         </div>
         <div class="card">
-          <div class="card-header">
-          <img src="images/cafes/whitelabel.jpeg" alt="white-label"
-          class="cafes"></div>
+          <div class="card-header grid grid-2-columns">
+          <img src="images/cafes/whitelabel.jpeg" alt="white-label" class="cafes">
+        <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d7977.573567464724!2d103.859105!3d1.302905!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x2fcd9a57817d5eef!2sThe%20White%20Label!5e0!3m2!1sen!2smy!4v1673592695283!5m2!1sen!2smy" class="embed" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe></div>
           <div class="card-body">
           <h4>The White Label</h4>
           <p>Enjoy an oasis of calm amidst the bustle of the city and take your time to savour classical French cuisine made Halal. Indulge in The White Label’s unique French Malayan cuisine and rediscover nostalgic local flavours presented in classical French cooking techniques.</p>
